# gpd_ros

./: CMakeLists.txt
gpd_ros/: CMakeLists.txt  package.xml
gpd_ros_msgs/: CMakeLists.txt  package.xml
gpd_ros_msgs/msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfigList.msg
gpd_ros_msgs/srv/: detect_grasps.srv
gpd_ros_wrapper/: CMakeLists.txt  package.xml
gpd_ros_wrapper/include/gpd_ros_wrapper/: grasp_detection_node.h  grasp_detection_server.h  grasp_messages.h
gpd_ros_wrapper/launch/: ur5.launch
gpd_ros_wrapper/src/gpd_ros_wrapper/: grasp_detection_node.cpp  grasp_detection_server.cpp  grasp_messages.cpp  grasp_plotter.cpp
launch/: ur5.launch
